tests/suite/snapshots/suite__check__tests__check__bad-array2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-array2.xi:2:5]
   │
 2 │     x:bool[] = false
   ·     ────┬───  
   ·         ╰───── Expected bool[] but found bool
───╯

